<?xml version="1.0" encoding="utf-8"?>

<!-- This layout use:
-The CardView contain The ConstraintLayout
-The ConstraintLayout in CardView to contain sub-views:
+ 1 imageview demo, constraint to top, start, end of this view to top, start, end of the ConstraintLayout;
; constraint bottom to top of guideline2
+ 1 guideline2 with orientation horizontal and layout_constraintGuide_percent="0.33", this help image demo
can divide height = 1/3 screen
+ 1 TextInputLayout to input name, constraint start, end of this view to start, end of the ConstraintLayout; constraint top to bottom of image demo
; constraint bottom to top of TextInputLayout size
+ 1 TextInputLayout to input size, constraint start, end of this view to start, end of the ConstraintLayout; constraint top to bottom of TextInputLayout size
; constraint bottom to top of TextInputLayout company
+ 1 TextInputLayout to input company, constraint start, end of this view with start, end of the ConstraintLayout; constraint top to bottom of TextInputLayout company
; constraint bottom to top of TextInputLayout description
+ 1 TextInputLayout to input description, constraint start, end of this view to start, end of the ConstraintLayout; constraint top to to bottom of TextInputLayout description
; constraint bottom to top of Button to login with a new account
+ 1 Button to save a new shoe and add it to the list, constraint start of this view to start of the ConstraintLayout; constraint top to bottom of TextInputLayout description
; constraint end to start of Button cancel
+ 1 Button to cancel action, constraint end of this view to end of the ConstraintLayout; constraint top to bottom of TextInputLayout description
; constraint start to end of Button save
 -->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="shoe"
            type="com.udacity.shoestore.models.Shoe"/>


        <variable
            name="shoeSizeString"
            type="Double" />
    </data>

    <androidx.cardview.widget.CardView
        android:layout_margin="@dimen/margin_12dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="@dimen/margin_16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:padding="@dimen/_12dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/image_shoe_demo"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_margin="@dimen/margin_8dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="@id/guideline2"
                app:srcCompat="@drawable/shoe_demo_1"
                android:contentDescription="@string/image_shoe_demo" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.33" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_layout_shoe_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/image_shoe_demo"
                app:layout_constraintBottom_toTopOf="@id/text_input_layout_shoe_size"
                android:hint="@string/name_2">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_input_shoe_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:text="@={shoe.name}" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_layout_shoe_size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_input_layout_shoe_name"
                app:layout_constraintBottom_toTopOf="@id/text_input_layout_shoe_company"
                android:hint="@string/size_2">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_input_shoe_size"
                    android:inputType="number"
                    android:text="@{shoeSizeString.toString()}"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_layout_shoe_company"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_input_layout_shoe_name"
                app:layout_constraintBottom_toTopOf="@id/text_input_layout_shoe_description"
                android:hint="@string/company_2">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_input_shoe_company"
                    android:inputType="text"
                    android:text="@={shoe.company}"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_layout_shoe_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_input_layout_shoe_company"
                app:layout_constraintBottom_toTopOf="@id/btn_save_new_shoe"
                android:hint="@string/description_2">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_input_shoe_description"
                    android:inputType="text"
                    android:text="@={shoe.description}"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_save_new_shoe"
                android:layout_marginTop="@dimen/margin_28dp"
                android:padding="@dimen/_12dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/new_button"
                android:textColor="@color/white"
                android:textAllCaps="false"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/btn_cancel"
                app:layout_constraintTop_toBottomOf="@id/text_input_layout_shoe_description"
                android:text="@string/save" />

            <Button
                android:id="@+id/btn_cancel"
                android:layout_marginTop="@dimen/margin_28dp"
                android:layout_marginStart="@dimen/_20dp"
                android:padding="@dimen/_12dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/new_button"
                android:textColor="@color/white"
                android:textAllCaps="false"
                app:layout_constraintStart_toEndOf="@id/btn_save_new_shoe"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_input_layout_shoe_description"
                android:text="@string/cancel" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</layout>