<?xml version="1.0" encoding="utf-8"?>

<!-- This layout use:
-The LinearLayout layout_width="match_parent", layout_height="match_parent" and gravity="center" to put CardView
at the center of screen
-The ConstraintLayout in CardView to contain sub-views:
+ 1 textView with content "Shoe Store login", constraint start, top, end of this view to start, top, end of the ConstraintLayout; constraint bottom to top of TextInputLayout email
+ 1 TextInputLayout to input email, constraint start, end of this view with start, end of the ConstraintLayout; constraint top to textView "Shoe Store login"
; constraint bottom to top of TextInputLayout password
+ 1 TextInputLayout to input password, constraint start, end of this view to start, end of the ConstraintLayout; constraint top to TextInputLayout email
; constraint bottom to top of Button to login with a new account
+ 1 Button to login with a new account, constraint start of this view to start of the ConstraintLayout; constraint top to bottom of TextInputLayout password
; constraint end to start of Button to login with an exist account
+ 1 Button to login with an exist account, constraint end of this view to end of the ConstraintLayout; constraint top to bottom of TextInputLayout password
; constraint start to end of Button to login with a new account
 -->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:gravity="center"
        android:background="@color/gray_eee"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:layout_margin="@dimen/margin_8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="@dimen/margin_16dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_big_2"
                    android:textStyle="bold"
                    android:text="@string/shoe_store_login"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toTopOf="@id/text_input_layout_email" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/text_input_layout_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_title"
                    app:layout_constraintBottom_toTopOf="@id/text_input_layout_password"
                    android:hint="@string/email">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edt_input_email"
                        android:inputType="textEmailAddress"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/text_input_layout_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/text_input_layout_email"
                    app:layout_constraintBottom_toTopOf="@id/btn_new_login"
                    android:hint="@string/password">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edt_input_pass"
                        android:inputType="textPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/btn_new_login"
                    android:layout_marginTop="@dimen/margin_28dp"
                    android:padding="@dimen/_12dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/new_button"
                    android:textColor="@color/white"
                    android:textAllCaps="false"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/btn_login_with_exist_account"
                    app:layout_constraintTop_toBottomOf="@id/text_input_layout_password"
                    android:text="@string/new_login" />

                <Button
                    android:id="@+id/btn_login_with_exist_account"
                    android:layout_marginTop="@dimen/margin_28dp"
                    android:padding="@dimen/_12dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/new_button"
                    android:textColor="@color/white"
                    android:textAllCaps="false"
                    app:layout_constraintStart_toEndOf="@id/btn_new_login"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/text_input_layout_password"
                    android:text="@string/login_with_exist_account" />
            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.cardview.widget.CardView>
    </LinearLayout>
</layout>